--- a/DetailWorkflow/DetailWorkflow.csproj
+++ b/DetailWorkflow/DetailWorkflow.csproj
@@ -180,6 +180,10 @@
     <Compile Include="Migrations\201509110441302_initial.Designer.cs">
       <DependentUpon>201509110441302_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509120948137_identity.cs" />
+    <Compile Include="Migrations\201509120948137_identity.Designer.cs">
+      <DependentUpon>201509120948137_identity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationRole.cs" />
@@ -273,6 +277,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201509110441302_initial.resx">
       <DependentUpon>201509110441302_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509120948137_identity.resx">
+      <DependentUpon>201509120948137_identity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
