Configured smtp local pickup, added email verification check before login. Added related views.

--- a/DetailWorkflow/Web.config
+++ b/DetailWorkflow/Web.config
@@ -85,4 +85,14 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="SpecifiedPickupDirectory" from="AK &lt;document@span.co.in&gt;">
+        <specifiedPickupDirectory pickupDirectoryLocation="C:\TempMail" />
+      </smtp>
+      <!--<smtp deliveryMethod="Network" from="AK &lt;sender@a.com &gt;">
+        <network enableSsl="true" host="smtp.gmail.com" password="a" userName="a@a.com" port="587" />
+			</smtp>-->
+    </mailSettings>
+  </system.net>
 </configuration>
