--- a/DetailWorkflow/packages.config
+++ b/DetailWorkflow/packages.config
@@ -27,5 +27,7 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.2" targetFramework="net452" />
+  <package id="Twilio" version="4.0.51" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
