--- a/DetailWorkflow/DetailWorkflow.csproj
+++ b/DetailWorkflow/DetailWorkflow.csproj
@@ -200,6 +200,10 @@
     <Compile Include="Migrations\201509130924345_UserAddress.Designer.cs">
       <DependentUpon>201509130924345_UserAddress.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509131008574_IntegratedModel.cs" />
+    <Compile Include="Migrations\201509131008574_IntegratedModel.Designer.cs">
+      <DependentUpon>201509131008574_IntegratedModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationRole.cs" />
@@ -305,6 +309,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509130924345_UserAddress.resx">
       <DependentUpon>201509130924345_UserAddress.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509131008574_IntegratedModel.resx">
+      <DependentUpon>201509131008574_IntegratedModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
