--- a/DetailWorkflow/DetailWorkflow.csproj
+++ b/DetailWorkflow/DetailWorkflow.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201509131014088_IntegratedModel.Designer.cs">
       <DependentUpon>201509131014088_IntegratedModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509131020049_Cascading.cs" />
+    <Compile Include="Migrations\201509131020049_Cascading.Designer.cs">
+      <DependentUpon>201509131020049_Cascading.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationRole.cs" />
@@ -312,6 +316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509131014088_IntegratedModel.resx">
       <DependentUpon>201509131014088_IntegratedModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509131020049_Cascading.resx">
+      <DependentUpon>201509131020049_Cascading.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
