--- a/DetailWorkflow/packages.config
+++ b/DetailWorkflow/packages.config
@@ -26,6 +26,8 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="RestSharp" version="105.2.2" targetFramework="net452" />
   <package id="Twilio" version="4.0.51" targetFramework="net452" />
