--- a/DetailWorkflow/DetailWorkflow.csproj
+++ b/DetailWorkflow/DetailWorkflow.csproj
@@ -387,7 +387,7 @@
     <Content Include="Views\Parts\Delete.cshtml" />
     <Content Include="Views\Parts\Details.cshtml" />
     <Content Include="Views\Parts\Edit.cshtml" />
-    <Content Include="Views\Parts\Index.cshtml" />
+    <Content Include="Views\Parts\_Index.cshtml" />
     <Content Include="Views\Labors\Create.cshtml" />
     <Content Include="Views\Labors\Delete.cshtml" />
     <Content Include="Views\Labors\Details.cshtml" />
